[gd_scene load_steps=3 format=3 uid="uid://pwbe3j2taw0u"]

[ext_resource type="Script" uid="uid://dtfmqbnsh18fn" path="res://scripts/UI/settings.gd" id="1_t8pki"]
[ext_resource type="PackedScene" uid="uid://bbt8lpwygv4f8" path="res://scenes/UI/bact_to_button.tscn" id="2_32w1k"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t8pki")

[node name="Content" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -392.0
offset_top = -197.0
offset_right = 392.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.7931468, 0.7826775, 0.7565041, 1)

[node name="MarginContainer" type="MarginContainer" parent="Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Content/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="SFX" type="HBoxContainer" parent="Content/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="ColorRect" type="ColorRect" parent="Content/MarginContainer/VBoxContainer/SFX"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
color = Color(0.733, 0.02, 0.376, 1)

[node name="SFXSlider" type="HSlider" parent="Content/MarginContainer/VBoxContainer/SFX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 5.0
step = 0.1

[node name="Music" type="HBoxContainer" parent="Content/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="ColorRect" type="ColorRect" parent="Content/MarginContainer/VBoxContainer/Music"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
color = Color(0.734502, 0.019052366, 0.378138, 1)

[node name="MusicSlider" type="HSlider" parent="Content/MarginContainer/VBoxContainer/Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 5.0
step = 0.1

[node name="BactToButton" parent="." instance=ExtResource("2_32w1k")]
layout_mode = 1
offset_left = 9.0
offset_top = 9.0
offset_right = 59.0
offset_bottom = 59.0

[connection signal="drag_ended" from="Content/MarginContainer/VBoxContainer/SFX/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="Content/MarginContainer/VBoxContainer/SFX/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="drag_ended" from="Content/MarginContainer/VBoxContainer/Music/MusicSlider" to="." method="_on_music_slider_drag_ended"]
[connection signal="value_changed" from="Content/MarginContainer/VBoxContainer/Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
